# zipstream

./: README.md  pyproject.toml
examples/: openvid.py
tests/: test_header.py
zipstream/: __init__.py  file.py  headers.py  stream.py
